# muzak

./: Cargo.toml
migrations/: 20240730163128_create_artist_table.sql  20240730163151_create_album_table.sql  20240730163200_create_track_table.sql
queries/scan/: create_album.sql  create_track.sql  get_album_id.sql
src/: data.rs  devices.rs  main.rs  ui.rs  util.rs
src/data/: events.rs  interface.rs  thread.rs  types.rs
src/devices/: errors.rs  format.rs  resample.rs  traits.rs
src/devices/builtin/: cpal.rs
src/media/: errors.rs  metadata.rs  playback.rs  traits.rs
src/media/builtin/: symphonia.rs
src/playback/: events.rs  interface.rs  thread.rs
src/providers/: errors.rs  metadata.rs  playback.rs  traits.rs
src/providers/builtin/: symphonia.rs
src/ui/: app.rs  arguments.rs  assets.rs  global_actions.rs  header.rs  models.rs  queue.rs  util.rs
src/ui/components/: table.rs
src/ui/components/table/: table_data.rs  table_item.rs
src/ui/header/: scrubber.rs
src/util/: num_info.rs  ux_workaround.rs
