[package]
name = "muzak"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
dateparser = "0.2.1"
symphonia = { version = "0.5.4", features = ["all", "opt-simd-sse"] }
cpal = "0.15.3"
bitflags = "2.6.0"
ux = "0.1.6"
rubato = "0.15.0"
rb = "0.4.1"
gpui = { git = "https://github.com/zed-industries/zed" }
smallvec = "1.13.2"
rust-embed = "8.5.0"
